--- a/Payroll_system/src/main/resources/templates/HiringManager.html
+++ b/Payroll_system/src/main/resources/templates/HiringManager.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Hiring Manager</title>
 </head>
-<style>	
-	
-	div#container	{
-	width:850px;
+<style>
+div#container {
+	width: 850px;
 	height: 590px;
-	margin:auto;
-	padding:10px;
-	background-color:#C99;	
-	border:thin solid black;
+	margin: auto;
+	padding: 10px;
+	background-color: #C99;
+	border: thin solid black;
 	font-color: blue;
 	text-align: center;
-	}	
-	h4 {text-align: center;}
-	
-	h3 {text-align: center;
-		color: brown;
-		font-weight: bold;
-		font-size: 30px;}
-	
-	label {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  text-align: right;
-  width: 400px;
-  line-height: 26px;
-  margin-bottom: 10px;
+}
+
+h4 {
+	text-align: center;
+}
+
+h3 {
+	text-align: center;
+	color: brown;
+	font-weight: bold;
+	font-size: 30px;
+}
+
+label {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	text-align: right;
+	width: 400px;
+	line-height: 26px;
+	margin-bottom: 10px;
 }
 
 input {
-  height: 20px;
-  flex: 0 0 200px;
-  margin-left: 10px;
+	height: 20px;
+	flex: 0 0 200px;
+	margin-left: 10px;
 }
-</style>	
+</style>
 <body>
-<div id = "container">
-<h3> WELCOME TO HIRING MANAGER HOME PAGE</h3>
-<p>
-<a a href="viewAllEmployees">View All Employees</a><br>
-</p>
-<p>
-<a href="inputEmployees">Add New Employee</a><br>
-</p>
-<p>
-<a href="../searchEmployee">Search for Employee</a>
-</p>
-</div>
+<form>
+test
+		<table>
+			<tr th:each="currentEmployee : ${employees}">
+				<td th:text="${currentEmployee.id}" />
+				<td th:text="${currentEmployee.position}" />
+			</tr>
+		</table>
+</form>
+	<div id="container">
+		<h3>WELCOME TO HIRING MANAGER HOME PAGE</h3>
+		<p>
+			<a href="viewAllEmployees">View All Employees</a><br>
+		</p>
+		<p>
+			<a href="inputEmployees">Add New Employee</a><br>
+		</p>
+		<p>
+			<a href="../searchEmployee">Search for Employee</a>
+		</p>
+	</div>
 </body>
 </html>
