--- a/Payroll_system/src/main/resources/templates/EmployeeResults.html
+++ b/Payroll_system/src/main/resources/templates/EmployeeResults.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
 <body>
-test
 
 </body>
 </html>
