--- a/Payroll_system/src/main/resources/templates/HiringManagerDataInput.html
+++ b/Payroll_system/src/main/resources/templates/HiringManagerDataInput.html
@@ -3,48 +3,17 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Hiring Manager</title>
+<link rel="stylesheet" th:href="@{/css/style.css}">
+<meta charset="UTF-8">
 </head>
-<style>
-div#container {
-	width: 850px;
-	height: 590px;
-	margin: auto;
-	padding: 10px;
-	background-color: #C99;
-	border: thin solid black;
-	font-color: blue;
-}
 
-h4 {
-	text-align: center;
-}
-
-h3 {
-	text-align: center;
-	color: brown;
-	font-weight: bold;
-	font-size: 30px;
-}
-
-label {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
-	text-align: right;
-	width: 400px;
-	line-height: 26px;
-	margin-bottom: 10px;
-}
-
-input {
-	height: 20px;
-	flex: 0 0 200px;
-	margin-left: 10px;
-}
-</style>
 <script>
-	function calcEmpPaycheck(){
+	function calcEmpPaycheck() {
 		let hours = parseFloat(document.getElementById("hours").value);
+		if(isNaN(hours)){
+			alert("Employee must have hours to calculate pay.");
+			return;
+		}
 		let salary = parseFloat(document.getElementById("salary").value);
 		let calculatedPay = hours * salary;
 		document.getElementById("calculatedPay").innerHTML = calculatedPay;
@@ -52,77 +21,105 @@ input {
 </script>
 
 <body>
-	<div id="container">
+	<div id="containerMain">
 
-		<form id="form1" th:object="${newEmployees}"
-			th:action="@{/update/{id}(id=${newEmployees.id})}" method=POST>
-			<h3>HIRING MANAGER ADD NEW EMPLOYEE FORM</h3>
+		<div id="header">
+			<h1>HIRING MANAGER EMPLOYEE FORM</h1>
+		</div>
 
-			<p>
-				<label for="position">Position: <input type="text"
-					name="position" id="position" size="20" th:field="*{position}" />
-				</label>
-			</p>
+		<div id="wrapper">
 
-			<p>
-				<label for="salary">Salary: <input type="text" name="salary"
-					id="salary" size="20" th:field="*{salary}" />
-				</label>
-			</p>
+			<div id="content">
 
-			<p>
-				<label for="dateHired">Date Hired: <input type="text"
-					name="dateHired" id="dateHired" size="20" th:field="*{dateHired}" />
-				</label>
-			</p>
+				<div id="containerform">
+					<form id="form1" th:object="${newEmployees}"
+						th:action="@{/update/{id}(id=${newEmployees.id})}" method=POST>
+						<h3>HIRING MANAGER ADD NEW EMPLOYEE FORM</h3>
 
-			<p>
-				<label for="empDepartment">Department: <input type="text"
-					name="empDepartment" id="empDepartment" size="20"
-					th:field="*{empDepartment}" />
-				</label>
-			</p>
+						<p>
+							<label for="position">Position: <input type="text"
+								name="position" id="position" size="20" th:field="*{position}" />
+							</label>
+						</p>
 
-			<p>
-				<label for="firstName">First Name: <input type="text"
-					name="firstName" id="firstName" size="20" th:field="*{firstName}" />
-				</label>
-			</p>
+						<p>
+							<label for="salary">Salary: <input type="text"
+								name="salary" id="salary" size="20" th:field="*{salary}" />
+							</label>
+						</p>
 
-			<p>
-				<label for="lastName">Last Name: <input type="text"
-					name="lastName" id="lastName" size="20" th:field="*{lastName}" />
-				</label>
-			</p>
-			
-			<p>
-				<label for="hours">Hours: <input type="text"
-					name="hours" id="hours" size="20" th:field="*{hours}" />
-				</label>
-			</p>
-				
-			<p>
-				<button type="button" onclick="calcEmpPaycheck()">Calculated Paycheck</button> 
-				
-			</p>
-			
-			<p><span id="calculatedPay"></span></p>
-				
+						<p>
+							<label for="dateHired">Date Hired: <input type="text"
+								name="dateHired" id="dateHired" size="20"
+								th:field="*{dateHired}" />
+							</label>
+						</p>
 
-			<p>
-				<input name="submit" type="submit" value="Submit"
-					style="font-size: 18px;" />
-			</p>
-		</form>
-		<p>
-			<a href="../viewAllEmployees">View All Employees</a>
-		</P>
-		<P>
-			<a href="../inputEmployees">Add New Employee</a>
-		</P>
-		<P>
-			<a href="../searchEmployee">Search for Employee</a>
-		</p>
+						<p>
+							<label for="empDepartment">Department: <input type="text"
+								name="empDepartment" id="empDepartment" size="20"
+								th:field="*{empDepartment}" />
+							</label>
+						</p>
+
+						<p>
+							<label for="firstName">First Name: <input type="text"
+								name="firstName" id="firstName" size="20"
+								th:field="*{firstName}" />
+							</label>
+						</p>
+
+						<p>
+							<label for="lastName">Last Name: <input type="text"
+								name="lastName" id="lastName" size="20" th:field="*{lastName}" />
+							</label>
+						</p>
+
+						<p>
+							<label for="hours">Hours: <input type="text" name="hours"
+								id="hours" size="20" th:field="*{hours}" />
+							</label>
+						</p>
+
+						<p>
+							<button type="button" onclick="calcEmpPaycheck()">Calculated
+								Paycheck</button>
+
+						</p>
+
+						<p>
+							<span id="calculatedPay"></span>
+						</p>
+
+
+						<p>
+							<input name="submit" type="submit" value="Submit"
+								style="font-size: 18px;" />
+						</p>
+					</form>
+				</div>
+			</div>
+
+
+			<div id="navigation">
+				<p>
+				<h3>Extra Things To Do</h3>
+				<a href="../viewAllEmployees">
+					<button>View All Employees</button>
+				</a>
+				</p>
+				<p>
+					<a href="../inputEmployees">
+						<button>Add New Employees</button>
+					</a>
+				</p>
+				<p>
+					<a href="../searchEmployee">
+						<button>Search for Employee</button>
+					</a>
+				</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
