--- a/Payroll_system/src/main/resources/templates/HiringManagerEdit.html
+++ b/Payroll_system/src/main/resources/templates/HiringManagerEdit.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>HR View</title>
+	<link rel="stylesheet" th:href="@{/css/style.css}">
+	<meta charset="ISO-8859-1">
+	<title>HR View</title>
 </head>
+
 <body>
+	<div id="header">
+		<h1>EMPLOYEE LIST FORM</h1>
+	</div>
 	<form>
 		<table>
-			<tr th:each="currentEmp :  ${employees}" >
+			<tr>
+				<th>Employee Id</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Position</th>
+				<th>Departments</th>
+				<th>Pay per Hour</th>
+				<th>Date Hired</th>
+				<th>Hours</th>
+
+				<th></th>
+				<th></th>
+			</tr>
+
+			<tr th:each="currentEmp :  ${employees}">
 				<td th:text="${currentEmp.id}" />
 				<td th:text="${currentEmp.firstName}" />
 				<td th:text="${currentEmp.lastName}" />
@@ -17,9 +36,9 @@
 				<td th:text="${currentEmp.dateHired}" />
 				<td th:text="${currentEmp.hours}" />
 				<td><a th:href="@{/edit/{id}(id=${currentEmp.id})}">Edit</a></td>
-				<td><a th:href="@{/delete/{id}(id=${currentEmp.id})}">Delete</a></td>
+				<td><a th:href="@{/delete/{id}(id=${currentEmp.id})}">Terminate</a></td>
 			</tr>
 		</table>
-	</form>	
+	</form>
 </body>
 </html>
