--- a/Payroll_system/src/main/resources/templates/searchEmployee.html
+++ b/Payroll_system/src/main/resources/templates/searchEmployee.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Search</title>
+	<meta charset="ISO-8859-1">
+	<title>Search</title>
+	<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-	<form th:action="@{/searchById}" method=POST>
-		Employee Id: 		  <input name="id"  id="id" size="20" th:value="${id}" required><br /> 
-		<input name="Submit" type="submit" value="submit"/>
-	</form>
-	
-	<form th:action="@{/searchByLastName}" method=POST>
-		Last Name: 		  <input name="lastName"  size="20" th:value="${lastName}" required><br /> 
-		<input name="Submit" type="submit" value="submit"/>
-	</form>
+	<div id="containerform">
+		<form th:action="@{/searchById}" method=POST>
+			Employee Id: <input name="id" id="id" size="20" th:value="${id}"
+				required> <input name="Submit" type="submit"
+				value="submit" />
+		</form>
+		<br>
+		<form th:action="@{/searchByLastName}" method=POST>
+			   Last Name:  <input name="lastName" size="20" th:value="${lastName}"
+				required> <input name="Submit" type="submit"
+				value="submit" />
+		</form>
+	</div>
 </body>
 </html>
