--- a/Payroll_system/src/main/resources/templates/ManagerEditing.html
+++ b/Payroll_system/src/main/resources/templates/ManagerEditing.html
@@ -11,8 +11,11 @@
 			}
 			let salary = parseFloat(document.getElementById("salary").value);
 			let calculatedPay = hours * salary;
-			document.getElementById("calculatedPay").innerHTML = calculatedPay;
+			document.getElementById("calculatedPay").innerHTML = dollarFormat(calculatedPay);
 		}
+		function dollarFormat(inAmount) {
+		return new Intl.NumberFormat('en-US', {style: 'currency', currency: 'USD'}).format(inAmount); 
+	}
 	</script>
 	<meta charset="ISO-8859-1">
 	<title>Manager Edit</title>
