--- a/Payroll_system/src/main/resources/templates/HiringManagerDataInput.html
+++ b/Payroll_system/src/main/resources/templates/HiringManagerDataInput.html
@@ -16,7 +16,11 @@
 		}
 		let salary = parseFloat(document.getElementById("salary").value);
 		let calculatedPay = hours * salary;
-		document.getElementById("calculatedPay").innerHTML = calculatedPay;
+		document.getElementById("calculatedPay").innerHTML = dollarFormat(calculatedPay);
+	}
+	
+	function dollarFormat(inAmount) {
+		return new Intl.NumberFormat('en-US', {style: 'currency', currency: 'USD'}).format(inAmount); 
 	}
 </script>
 
